manifests/services.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-ui-nodeport
  labels:
    app: chat-ui
spec:
  type: NodePort
  selector:
    app: chat-ui
    tier: web
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app: redis
spec:
  type: ClusterIP
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: chat-server-nodeport
  labels:
    app: chat
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
    beta.cloud.google.com/backend-config: '{"default": "chat-server-backend"}'
spec:
  type: NodePort
  selector:
    app: chat-server
  ports:
  - name: websocket
    port: 8080
    targetPort: 8080
