manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.global-static-ip-name: "k8s-demo-global-address"
  name: k8s-demo-lb
  namespace: k8s-demo
  labels:
    app: frontend
spec:
  backend:
    serviceName: frontend-nodeport
    servicePort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-nodeport
  labels:
    app: frontend
  namespace: k8s-demo
spec:
  type: NodePort
  selector:
    app: frontend
    tier: web
  ports:
  - port: 8080
    targetPort: 8080
